# model-converter

./: .gitmodules  CMakeFiles.txt  CMakeLists.txt  test.json
src/: encoder.cpp  encoder.h  logger.h  main.cpp  types.h
